@@ -11,6 +11,7 @@
 * Addressed a common problem with Derby and CommandEventHandler.touchUser() 
 * Added BNetUser.toStringEx() to display ping and flags
 * Fixed a bug where 'commander access' was not passed to commands properly
+* Added a 'setauth' command
 
 2.0.3 (r1072) 2008-01-07:
 * Completely redesigned the command subsystem to fit a more object-oriented model
